<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/round_bg"

            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_gravity="center">
                <TextView
                    android:layout_marginTop="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/error"
                    android:textColor="#6C6C6C"
                    android:fontFamily="@font/rubik_regular"
                    android:textSize="23sp"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/errorDetails"
                    tools:text="@string/error"
                    android:textColor="#6C6C6C"
                    android:fontFamily="@font/rubik_regular"
                    android:textSize="18sp"
                    android:textStyle="bold"/>
                <com.airbnb.lottie.LottieAnimationView
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:id="@+id/animation_view"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_fileName="error.json"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/black"
                            android:text="@string/dismiss"
                            android:id="@+id/dismissError"
                            android:layout_marginBottom="10dp"/>
                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:visibility="gone"
                            android:backgroundTint="@android:color/darker_gray"
                            android:textColor="@color/black"
                            android:text="@string/resend"
                            android:id="@+id/resendError"
                            android:layout_marginBottom="10dp"/>
                </LinearLayout>


        </LinearLayout>



</LinearLayout>