<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center_horizontal"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/premium_bg"
        android:padding="10dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="center">
            <ImageView
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:src="@drawable/crown"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:fontFamily="@font/rubik_regular"
                android:textSize="22sp"
                android:textStyle="bold"
                android:text="@string/upgrade_to_premium"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_regular"
            android:textAlignment="center"
            android:text="@string/premium_para"/>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/black"
            app:cardCornerRadius="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true"
                android:id="@+id/subscribe"
                android:background="?attr/selectableItemBackground"
                android:padding="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/rubik_regular"
                    android:text="SUBSCRIBE ₹ 49"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
                <ProgressBar
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:visibility="gone"
                    android:layout_centerInParent="true"
                    android:indeterminateTint="@color/white"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center">
            <ImageView
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:padding="10dp"
                android:src="@drawable/warning"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/free_account_slogan"/>
        </LinearLayout>
    </LinearLayout>


    <ImageView
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="80dp"
        android:padding="7dp"
        android:id="@+id/closeDialog"
        android:src="@drawable/close"/>

</LinearLayout>